<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.coop.mad_final.MainActivity">

    <TextView
        android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:id="@+id/textView2" />

    <TextView
        android:text="@string/result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/button"

        android:id="@+id/resultTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/imageView"
        android:layout_toStartOf="@+id/imageView" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/chocolate"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:layout_marginBottom="17dp"
        android:id="@+id/imageView"
        android:src="@drawable/chocolate"
        android:contentDescription="@string/iceCream_image"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/button"
        android:layout_toEndOf="@+id/button" />

    <Button
        android:text="@string/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_above="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:onClick="findIceCream"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/iceCreamRadioGroup"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">
        <RadioButton
            android:text="ice cream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/radioButton1" />

        <RadioButton
            android:text="Froyo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton2"
            android:layout_alignBaseline="@+id/radioButton1"
            android:layout_alignBottom="@+id/radioButton1"
            android:layout_centerHorizontal="true" />

        <RadioButton
            android:text="Gelato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton3"
            android:layout_marginRight="14dp"
            android:layout_marginEnd="14dp"
            android:layout_alignTop="@+id/radioButton2"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RadioGroup>

    <Switch
        android:text="@string/dairy_choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editText"
        android:layout_alignRight="@+id/imageView"
        android:layout_alignEnd="@+id/imageView"
        android:id="@+id/switch1" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:id="@+id/spinner"
        android:entries="@array/iceCreamType"
        android:layout_below="@+id/editText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ToggleButton
        android:text="ToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toggleButton"
        android:layout_alignBaseline="@+id/spinner"
        android:layout_alignBottom="@+id/spinner"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignStart="@+id/imageView"
        android:textOff="@string/toggle_off"
        android:textOn="@string/toggle_on"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="33dp"
        android:id="@+id/editText"
        android:layout_below="@+id/textView2"
        android:layout_alignRight="@+id/button"
        android:layout_alignEnd="@+id/button"
        android:hint="Name" />


</RelativeLayout>
